--- a/Note/Podfile
+++ b/Note/Podfile
@@ -5,9 +5,10 @@ project './Note.xcodeproj/'
 
 target 'Note' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
+  #use_frameworks!
 
   # Pods for Note
+  pod 'CocoaLumberjack/Swift'
 
   target 'NoteTests' do
     inherit! :search_paths
@@ -19,4 +20,14 @@ target 'Note' do
     # Pods for testing
   end
 
+end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        if target.name == 'CocoaLumberjack/Swift'
+            target.build_configurations.each do |config|
+                config.build_settings['SWIFT_VERSION'] = '4.2'
+            end
+        end
+    end
 end
